# Cybersecurity_Portfolio

./: README.md  enterprise-competitor-strategy.md  esp32-security-simulation-plan.md  esp32-wifi-adapter-summary.md  gantt-chart-addition.md  requirements.txt
esp32_security_sim/: .dockerignore  Dockerfile  README.md  README_REAL_IMPLEMENTATION.md  config.json  direct_run.py  docker-compose.yml  docker-run.bat  docker-run.sh  main.py  recreate_venv.bat  requirements.txt  requirements_flexible.txt  requirements_installed.txt  run_with_paths.py  setup_and_run.bat
esp32_security_sim/archive/: encryption_fixed.py  fix_crypto.py  fix_cryptography.py  fix_dependencies.py  fix_final.py  flask_fix.py  install_and_run.py  reinstall_packages.py  setup_environment.py  simulator_fixed.py
esp32_security_sim/hardware/: CMakeLists.txt  README.md  TEST_README.md  WIRESHARK_INTEGRATION.md  loopback_test.py  main_app.c  packet_capture.c  packet_capture.h  pcap_test.py  project_CMakeLists.txt  raw_packet_test.py  wireshark_stream_test.py
esp32_security_sim/hardware/components/esp_pcap/: CMakeLists.txt  esp_pcap.c
esp32_security_sim/hardware/components/esp_pcap/include/: esp_pcap.h
esp32_security_sim/hardware/components/esp_security_core/: CMakeLists.txt  packet_capture.c
esp32_security_sim/hardware/components/esp_security_core/include/: packet_capture.h
esp32_security_sim/hardware/main/: CMakeLists.txt  Kconfig.projbuild  main_app.c
esp32_security_sim/hardware/pcap_test_output/: esp_capture_20250227_212506.pcap  esp_capture_20250227_214246.pcap
(+19 files in other folders)
